2003-09-29  Mike Stump  <mrs@apple.com>

	* toplev.c (server_loop): Add load balancing server front end.
	(get_request_from_load_balancer): Add.
	(get_job): Add.
	(send_fd): Add.

	* toplev.c (get_fd): Fix typo.

	* objc/lang-specs.h: Don't include -server in name.

	* toplev.c (server_loop): Add multiple CPU, multiple server support.

	* gcc.c (get_server_socket): Get an ACK from the server on session start.
	(delete_temp_files): Don't use global server_socket.

	* toplev.c (server_loop): Listen for one client at a time.  Write
	an ACK to the client on session bring up.  Used to delay pipeline
	processing until the server commits to servicing us.

	* gcc.c (get_server_socket): Arrange to close server socket on exec.

	* tree.c (get_next_decl_uid): Add.
	* tree.h (get_next_decl_uid): Add.

	* toplev.c (do_compile): Add output fragment so that different
	translation units can have different builtins.
	(server_loop): Quit the server when we encouter errors.

	* langhooks.h (struct lang_hooks): Add uses_conditional_symtab,
	init_output_fragment, create_output_fragment,
	end_output_fragment): Add.
	* langhooks-def.h (LANG_HOOKS_USES_CONDITIONAL_SYMTAB): Add.
	(LANG_HOOKS_INIT_OUTPUT_FRAGMENT): Add.
	(LANG_HOOKS_CREATE_OUTPUT_FRAGMENT): Add.
	(LANG_HOOKS_END_OUTPUT_FRAGMENT): Add.

	* expr.c (expand_expr): Hack around hard error for now...

	* dbxout.c (dbxout_init): Manage debugging information across
	multiple translation units.  We use different files for each
	translation unit.

	* cppfiles.c (stack_file): Create fragments more often for C++, as
	they are the only way to turn off definitions and macros.
	(read_file_guts): Likewise.

	* toplev.c (server_loop): Remove output from server channel, use a
	single byte to indicate exit status.
	* gcc.c: Add hadling for --kill-servercp.
	(delete_temp_files): Likewise.
	(pexecute_server_wait): Add.
	(pexecute_server): Add.  Split out from execute and add support
	for piping.