@@ -1,3 +1,10 @@
+2003-09-30  Mike Stump  <mrs@apple.com>
+
+	* opts.c (add_input_filename): Allocate "-" using malloc, as later
+	we free it.
+	* toplev.c (pop_fd): Fix reading from -, by ignore errors from
+	closing stdin again.
+
 2003-09-29  Mike Stump  <mrs@apple.com>
 
 	* toplev.c (server_loop): Add load balancing server front end.
